<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobOfferActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="755dp"
        android:layout_marginTop="24dp"
        android:background="#EFEFEF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTemplate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#70A7DC"
            android:textColor="#FBFBFB"
            android:text="Enter Job Offer"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="80dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:padding="@dimen/cardview_compat_inset_shadow"
                android:text="Title" />

            <EditText
                android:id="@+id/titleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/companyLabel"
                android:layout_width="80dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:padding="@dimen/cardview_compat_inset_shadow"
                android:text="Company" />

            <EditText
                android:id="@+id/companyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/locationLabel"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="39dp"-->
<!--                android:layout_weight="1"-->
<!--                android:padding="@dimen/cardview_compat_inset_shadow"-->
<!--                android:text="Location" />-->

<!--            <EditText-->
<!--                android:id="@+id/locationID"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:ems="10"-->
<!--                android:inputType="textPersonName"-->
<!--                />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stateLabel"
                android:layout_width="80dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:padding="@dimen/cardview_compat_inset_shadow"
                android:text="State" />

            <EditText
                android:id="@+id/stateID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="80dp"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:padding="@dimen/cardview_compat_inset_shadow"
                android:text="City" />

            <EditText
                android:id="@+id/cityID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearlySalaryLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Salary *" />

            <EditText
                android:id="@+id/yearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearlyBonusLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yearly Bonus *" />

            <EditText
                android:id="@+id/yearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leaveTimeLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Leave Time (in days)" />

            <EditText
                android:id="@+id/leaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stockOptionSharesLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Stock Option Shares" />

            <EditText
                android:id="@+id/stockOptionSharesID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homeBuyingProgramFundLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Home Buying Program fund"/>

            <EditText
                android:id="@+id/homeBuyingProgramFundID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wellnessFundLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Wellness fund"/>

            <EditText
                android:id="@+id/wellnessFundID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="* adjusted for cost of living" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveOfferButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Offer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancelOfferButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="cancelOfferHandler"
                android:text="Cancel &amp; Return to Main Menu" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>